# The-CISO-Council

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml.example  pyproject.toml  requirements.txt
.github/: SECURITY.md
council/: __init__.py  __main__.py  cli.py  config.py  models.py  pdf_report.py  personas.py  prompts.py  providers.py  report.py  scenarios.py  scoring.py  server.py  session.py
docs/: WRITEUP.md
scenarios/ai_governance/: biased_lending_model.yaml
scenarios/incident_response/: vendor_breach.yaml
scenarios/risk_acceptance/: cloud_migration.yaml
static/: index.html
